# tetrachotomy

./: .gitignore  README.md  example.py  justfile  poles_multilayer_analytical.py  pyproject.toml  setup.cfg  test.py  tetrachotomy.py
dev/: logo.py
examples/: animate.py  example.py
matlab/: calc_int.m  coupe4.m  ispole.m  main_tetrachotomy.m  param.m  pole_2D.m  poly_period.m  trace_rect.m  trans.m
python/: integ.py  test.py  tetrachotomy.py
tetrachotomy/: __init__.py  core.py  integ.py  test.py  test2.py  tetrachotomy.py
tetrachotomy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tetrachotomy/tetrachotomy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
