[metadata]
name = tetrachotomy
version = 0.0.1
author = Benjamin Vial
email = benjamin.vial84@gmail.com
description = Hunting poles in the complex plane
url = https://github.com/benvial/tetrachotomy
project_urls =
    Code=https://github.com/benvial/tetrachotomy
    Documentation=
    Issues=https://nannos.gitlab.io/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Utilities
keywords =
    fourier modal method
    diffraction
    optics
    photonics
    metamaterials

[options]
package_dir =
    =tetrachotomy
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    numpy >= 1.9
    matplotlib
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel
dependency_links = https://storage.googleapis.com/jax-releases/jax_releases.html


[options.packages.find]
where=tetrachotomy
